[metadata]
name = liba
version = attr: liba.__version__

author = Dmitry Voronin
author_email = dimka665@gmail.com
url = https://github.com/dimka665/liba

description = Project description
keywords =
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:

[tool:pytest]
testpaths = tests docs/conf.py
norecursedirs =
    .*/
    docs/

[flake8]
max-line-length = 120
exclude =
    .*/,
    docs/_build/

[coverage:run]
branch = True
source =
    liba/

[mypy]
check_untyped_defs = yes

[tox:tox]
envlist = py36
skipsdist = true

[testenv]
skip_install = true
passenv = PYTHONPATH
deps = pipenv
commands =
    pipenv install --dev --skip-lock
    {toxinidir}/run-tests.sh

[bumpr]
file = liba/__init__.py
files = setup.py
tests = pytest
vcs = git
verbose = yes

[bumpr:bump]
part = patch
