[metadata]
name = liba
version = attr: liba.__version__

author = Dmitry Voronin
author_email = dimka665@gmail.com
url = https://github.com/dimka665/liba

description = Project description
keywords =
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:

[tool:pytest]
testpaths = tests docs/conf.py
norecursedirs =
    .*/
    docs/

[flake8]
max-line-length = 120
exclude =
    .*/,
    docs/_build/

[coverage:run]
branch = True
source =
    liba/

[mypy]
check_untyped_defs = yes

[tox:tox]
envlist = py35, py36, docs
;envlist = py35, docs
;envlist = py35
;envlist = docs
skipsdist = true

[testenv]
skip_install = true
deps = pipenv
commands =
    pipenv install --dev --skip-lock
;    ./run-tests.sh
    pipenv run test

[testenv:docs]
basepython = python3.5
deps =
    pipenv
    sphinx
commands =
    pipenv run doctest
    pipenv run build-docs

[bumpr]
file = liba/__init__.py
files = setup.py
tests = pytest
vcs = git
verbose = yes

[bumpr:bump]
part = patch
